Fix issue on mobile when scrolling

--- a/client/src/components/drawer/Drawer.css
+++ b/client/src/components/drawer/Drawer.css
@@ -11,7 +11,7 @@
     right: 0;
     bottom: 0;
     left: 0;
-    /*background-color: color(var(--gray-dark) alpha(75%))*/
+    overflow: hidden;
 }
 
 .Drawer {
